infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ladvs-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /applicant(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: applicant-service
            port:
              number: 80
      - path: /application(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: application-service
            port:
              number: 80
      - path: /documents(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: document-service
            port:
              number: 80
      - path: /admin(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: admin-service
            port:
              number: 80
